syntax = "proto3";

// import "google/protobuf/timestamp.proto";

package message;

service MessageService {
  rpc FindOne (MessageById) returns (ResponseWithMessage);
  rpc FindMany (Pagination) returns (ResponseWithMessages);
  rpc Create (CreateMessage) returns (Response);
  rpc Delete (MessageById) returns (Response);
}


// responses

message ResponseWithMessage {
  optional string error = 1;
  optional Message message = 2;
}

message ResponseWithMessages {
  optional string error = 1;
  repeated Message messages = 2;
}


message Response {
  optional string error = 1;
  optional bool ok = 2;
}



// requests

message Pagination {
  int32 limit = 1;
  int32 offset = 2;
}

message MessageById {
  int32 id = 1;
}

message CreateMessage {
  string text = 1;
}

message Message {
  int32 id = 1;
  string text = 2;
  string created_at = 3;
  string updated_at = 4;
  // google.protobuf.Timestamp created_at = 3;
  // google.protobuf.Timestamp updated_at = 4;
}
